[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/GUI/Sprechblase.gd" type="Script" id=1]
[ext_resource path="res://Assets/Pfeile/Textbox_Pfeil_Rechts.png" type="Texture" id=2]
[ext_resource path="res://Assets/Textboxen/Textbox_Zombie.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textboxen/Textbox_Geist.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textboxen/Textbox.png" type="Texture" id=5]
[ext_resource path="res://Assets/Pfeile/Textbox_Pfeil_Links.png" type="Texture" id=6]
[ext_resource path="res://Assets/Fonts/zai_StopClimateChange.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 7 )

[node name="Sprechblase" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Textboxen" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ZombieBox" type="TextureRect" parent="Textboxen"]
visible = false
margin_left = 245.0
margin_top = 753.0
margin_right = 1823.0
margin_bottom = 1073.0
texture = ExtResource( 3 )

[node name="GeistBox" type="TextureRect" parent="Textboxen"]
visible = false
margin_left = 232.0
margin_top = 688.0
margin_right = 1727.0
margin_bottom = 1074.0
texture = ExtResource( 4 )

[node name="Textbox" type="TextureRect" parent="Textboxen"]
margin_left = 242.0
margin_top = 766.0
margin_right = 1691.0
margin_bottom = 1076.0
texture = ExtResource( 5 )

[node name="RichTextLabel" type="RichTextLabel" parent="Textboxen"]
margin_left = 460.0
margin_top = 888.0
margin_right = 1327.0
margin_bottom = 1060.0
custom_fonts/normal_font = SubResource( 1 )
text = "......"

[node name="ForewardButton" type="TextureButton" parent="Textboxen"]
margin_left = 1466.0
margin_top = 1006.0
margin_right = 1531.0
margin_bottom = 1070.0
texture_normal = ExtResource( 2 )

[node name="BackButton" type="TextureButton" parent="Textboxen"]
margin_left = 1366.0
margin_top = 1005.0
margin_right = 1431.0
margin_bottom = 1053.0
texture_normal = ExtResource( 6 )

[connection signal="pressed" from="Textboxen/ForewardButton" to="." method="_on_ForewardButton_pressed"]
[connection signal="pressed" from="Textboxen/BackButton" to="." method="_on_BackButton_pressed"]
